# base32768-rs

./: Cargo.toml  README.md  build.rs
base32768-table/: Cargo.toml  build.rs
base32768-table/src/: lib.rs
benches/: benchmark.rs
src/: lib.rs  table.rs
test-resources/bad/: not-base32768-char.txt
tests/: pairs.rs
