[package]
name = "base32768"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.13", features = ["macros"] }
itertools = "0.14"
thiserror = "2"

[build-dependencies]
const-gen = "1.6.8"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
